@@ -80,6 +80,7 @@
 	- add brp-nobuildrootpath to scrub $RPM_BUILD_ROOT from *.la and *.pc.
 	- fix: rescusitate doxygen doco, don't bother tools/dump.c.
 	- generate executable(foo) run-time shell requirements, opt-in for now.
+	- fix: python/rpmte-py.c te.Key() return needs Py_INCREF(Key).
 
 4.4.1 -> 4.4.2:
 	- start 4.4.2 devel.
